--- a/src/app/product/product-list.component.html
+++ b/src/app/product/product-list.component.html
@@ -6,12 +6,12 @@
     <div class='row'>
       <div class='col-md-2'>Filter by:</div>
       <div class='col-md-4'>
-        <input type='text' [(ngModel)]="filterText" />
+        <input type='text' [(ngModel)]="listFilter" />
       </div>
     </div>
     <div class='row'>
       <div class='col-md-6'>
-        <h4>Filtered by: {{filterText}}</h4>
+        <h4>Filtered by: {{listFilter}}</h4>
       </div>
     </div>
     <div class='table-responsive' *ngIf="products && products.length">
@@ -30,7 +30,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of products">
+          <tr *ngFor="let product of filterdProducts">
             <td>
               <img *ngIf="showImage"
                 [src]="product.imageUrl" 
@@ -40,10 +40,14 @@
               />
             </td>
             <td>{{product.productName}}</td>
-            <td>{{product.productCode}}</td>
+            <td>{{product.productCode | convertToSpaces: '-'}}</td>
             <td>{{product.releaseDate | date:'dd,MMM yyyy'}}</td>
             <td>{{product.price | currency: 'USD': 'symbol': '1.3-3'}}</td>
-            <td>{{product.starRating}}</td>
+            <td>
+              <pm-star 
+                [rating]="product.starRating"
+                (ratingClicked)="onRatingClicked($event)">
+              </pm-star></td>
           </tr>
         </tbody>
       </table>
