--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -39,7 +39,9 @@
                 [style.margin.px]="imageMargin"
               />
             </td>
-            <td>{{product.productName}}</td>
+            <td>
+              <a [routerLink]="['/products', product.productId]">{{product.productName}}</a>
+            </td>
             <td>{{product.productCode | convertToSpaces: '-'}}</td>
             <td>{{product.releaseDate | date:'dd,MMM yyyy'}}</td>
             <td>{{product.price | currency: 'USD': 'symbol': '1.3-3'}}</td>
